--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@
   "node_js": 8.5.0,
 
   "install": [
-    "npm install typescript",
+    "npm install typescript -g",
+    "npm install mocha -g",
     "npm install ts-mocha -g"
   ],
 
