Updated the options used by the TypeScript compiler (tsc) for building. Expect no test features to be broken, untested right now.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "ES2017",
-    "sourceMap": true
+    "outDir": "./build"
   },
 
   "compileOnSave": false,
@@ -12,6 +12,7 @@
   },
 
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "./test/**"
   ]
 }
