Updated the building process and the structure of the build/ folder.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "ES2017",
-    "outDir": "./build"
+    "target": "ES6",
+    "outDir": "./build/js"
   },
 
   "compileOnSave": false,
