Added support of amd for ts-mocha, and fixed travis check

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@
   "install": [
     "npm install typescript -g",
     "npm install mocha -g",
-    "npm install ts-mocha -g"
+    "npm install ts-mocha -g",
+    "npm install amd-loader -g"
   ],
 
   "script": [
