Added typedoc support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@
     "npm install typescript -g",
     "npm install mocha -g",
     "npm install ts-mocha -g",
-    "npm install amd-loader -g"
+    "npm install amd-loader -g",
+    "npm install typedoc -g"
   ],
 
   "script": [
