Added typedoc support.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,14 @@
     "npm install typescript -g",
     "npm install mocha -g",
     "npm install ts-mocha -g",
-    "npm install amd-loader -g"
+    "npm install amd-loader -g",
+    "npm install typedoc -g"
   ],
 
   "script": [
     "make all",
-    "make test"
+    "make test",
+    "make doc"
   ],
 
   "group": "stable",
