Added the --pretty option of ts to the tsc configuration file (for more readable errors).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "module": "amd",
     "target": "ES6",
-    "outDir": "./build/js"
+    "outDir": "./build/js",
+    "pretty": true
   },
 
   "compileOnSave": false,
