--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@
     "npm install mocha -g",
     "npm install ts-mocha -g",
     "npm install amd-loader -g",
-    "npm install typedoc -g"
+    "npm install typedoc -g",
+    "npm install jquery -g",
+    "npm install --save-dev @types/jquery"
   ],
 
   "script": [
