--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@
   "deploy": {
       "provider": "pages",
       "skip_cleanup": true,
+      "local_dir": "build",
       "github_token": $GITHUB_TOKEN,
       "on": {
         "branch": master
