Added libraries to be able to write test code that needs document.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@
     "npm install amd-loader -g",
     "npm install typedoc -g",
     "npm install jquery -g",
-    "npm install --save-dev @types/jquery"
+    "npm install --save-dev @types/jquery",
+    "npm install jsdom",
+    "npm install jsdom-global",
+    "npm install canvas"
   ],
 
   "script": [
