--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@
   "language": "node_js",
   "node_js": 8.5.0,
 
+  "env": "CXX=g++-4.8",
+
+  "addons": {
+    "apt": {
+      "sources": ubuntu-toolchain-r-test,
+      "packages": g++-4.8
+    }
+  },
+
   "install": [
     "npm install typescript -g",
     "npm install mocha -g",
