--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
   "addons": {
     "apt": {
       "sources": ubuntu-toolchain-r-test,
-      "packages": g++-4.8
+      "packages": ["g++-4.8", "libgif-dev"]
     }
   },
 
