Added some new tests on RubEns and the UI, with a mechanism to setup the DOM from index.html for testing purposes. Some new dependencies have been added as well, in order to run the new tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@
     "npm install amd-loader -g",
     "npm install typedoc -g",
     "npm install jquery -g",
+    "npm install jquery",
     "npm install --save-dev @types/jquery",
     "npm install jsdom",
     "npm install jsdom-global",
