Put specific version of canvas, since last version (2.0.0-alpha) has bugs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@
     "npm install --save-dev @types/jquery",
     "npm install jsdom",
     "npm install jsdom-global",
-    "npm install canvas"
+    "npm install canvas@1.6.7"
   ],
 
   "script": [
