--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "jquery": "^3.2.1"
   },
   "devDependencies": {
+    "@types/jquery": "^3.2.16",
     "canvas": "^1.6.7",
-    "jsdom": "^11.3.0",
+    "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
     "mocha": "^4.0.1",
-    "ts-mocha": "",
+    "ts-mocha": "^3.5.3",
     "typedoc": "^0.9.0",
-    "typedoc-dash-theme": "^1.1.0"
+    "typescript": "^2.5.2"
   },
   "scripts": {
     "test": "ts-mocha test/**/*.ts"
