--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "test": "test"
   },
   "dependencies": {
-    "amd-loader": "^0.0.8",
-    "jquery": "^3.2.1"
+    "amd-loader": "0.0.8",
+    "jquery": "^3.2.1",
+    "ts-mocha": "^1.0.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.2.16",
     "canvas": "^1.6.7",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
-    "mocha": "^3.2.0",
-    "ts-mocha": "^1.0.3",
     "typedoc": "^0.9.0",
     "typescript": "^2.5.2"
   },
