Added a .nojekyll file for GH Pages to publish doc files starting with an underscore. See https://help.github.com/articles/files-that-start-with-an-underscore-are-missing/ for more details.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@
   "script": [
     "make setup",
     "make all",
-    "mv docs build"
+    "mv docs build",
+    "touch build/.nojekyll"
   ],
 
   "group": "stable",
