--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   },
   "dependencies": {
     "amd-loader": "0.0.8",
-    "jquery": "^3.2.1",
-    "ts-mocha": "^1.0.3"
+    "jquery": "^3.2.1"
   },
   "devDependencies": {
-    "@types/jquery": "^3.2.16",
-    "canvas": "^1.6.7",
+    "canvas": "^1.6.9",
+    "@types/jquery": "^3.2.17",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
     "typedoc": "^0.9.0",
